libstdc++-v3/testsuite/21_strings/basic_string/numeric_conversions/char/stof.cc
@@ -1,4 +1,6 @@
 // { dg-options "-std=gnu++0x" }
+// { dg-require-string-conversions "" }
+
 // 2008-06-15  Paolo Carlini  <paolo.carlini@oracle.com>
 
 // Copyright (C) 2008 Free Software Foundation, Inc.
@@ -29,8 +31,6 @@
 void
 test01()
 {
-#ifdef _GLIBCXX_USE_C99
-
   bool test __attribute__((unused)) = false;
   using namespace std;
 
@@ -129,8 +129,6 @@ test01()
       VERIFY( test );
       VERIFY( f1 == -1.0f );
     }
-
-#endif
 }
 
 int main()
